added second line of story

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
   <body>
-    <p>It was a dark and stormy night...</p>
+    <p>It was a dark and stormy night...
+      The fire jumped out of the fireplace and consumed the sacrifice on the alter.
+    </p>
   </body>
 </html>
