--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <body>
     <p>It was a dark and stormy night...
       The fire jumped out of the fireplace and consumed the sacrifice on the alter.
+      The offering was pleasing to the Cat God, whos blessings would bring rain.
     </p>
   </body>
 </html>
