--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
   <body>
     <p>It was a dark and stormy night...
       The fire jumped out of the fireplace and consumed the sacrifice on the alter.
-      The offering was pleasing to the Cat God, whos blessings would bring rain.
+      The offering was pleasing to the Cat God, whose blessings would bring rain.
+      The Cat God peed on the town.
     </p>
   </body>
 </html>
