--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
       The fire jumped out of the fireplace and consumed the sacrifice on the alter.
       The offering was pleasing to the Cat God, whose blessings would bring rain.
       The Cat God peed on the town.
-      And the harvest was plentiful but then vikings came ashore.
+      And the harvest was plentiful but then vikings came ashore!
+      The vikings were led by the powerful Gretchen Hawshining, a goddess of
     </p>
   </body>
 </html>
