next next line baybay yeet

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       The Cat God peed on the town.
       And the harvest was plentiful but then vikings came ashore!
       The vikings were led by the powerful Gretchen Hawshining, a goddess of
+      Kicking Ass and Taking Names. The townspeople were totally hosed but then
     </p>
   </body>
 </html>
