--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
       The Cat God peed on the town.
       And the harvest was plentiful but then vikings came ashore!
       The vikings were led by the powerful Gretchen Hawshining, a goddess of
-      Kicking Ass and Taking Names. The townspeople were totally hosed but then
+      Kicking Ass and Taking Names. The townspeople were totally hosed but they
+      consumed medical-grade cumin to combat their consumption. The cumin smeared all over their faces, making them look like
     </p>
   </body>
 </html>
