--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       The vikings were led by the powerful Gretchen Hawshining, a goddess of
       Kicking Ass and Taking Names. The townspeople were totally hosed but they
       consumed medical-grade cumin to combat their consumption. The cumin smeared all over their faces, making them look like
+      Weirdos with spice on their faces. However this gave them extra spicy meme powers that they used to
     </p>
   </body>
 </html>
