--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
       The Cat God peed on the town.
       And the harvest was plentiful but then vikings came ashore!
       The vikings were led by the powerful Gretchen Hawshining, a goddess of
-      Kicking Ass and Taking Names. The townspeople were totally hosed but they
+      kicking Ass and Taking Names. The townspeople were totally hosed but they
       consumed medical-grade cumin to combat their consumption. The cumin smeared all over their faces, making them look like
-      Weirdos with spice on their faces. However this gave them extra spicy meme powers that they used to
+      weirdos with spice on their faces. However, this gave them extra spicy meme powers that they used to
+      battle the Cat God. They arranged a meme battle, deciding upon the old baseball diamond in the West field, and the people streamed into the field on a dark dark Tuesday.
     </p>
   </body>
 </html>
