--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
       The Cat God peed on the town.
       And the harvest was plentiful but then vikings came ashore!
       The vikings were led by the powerful Gretchen Hawshining, a goddess of
-      kicking Ass and Taking Names. The townspeople were totally hosed but they
+      Kicking Ass and Taking Names. The townspeople were totally hosed but they
       consumed medical-grade cumin to combat their consumption. The cumin smeared all over their faces, making them look like
       weirdos with spice on their faces. However, this gave them extra spicy meme powers that they used to
       battle the Cat God. They arranged a meme battle, deciding upon the old baseball diamond in the West field, and the people streamed into the field on a dark dark Tuesday.
-      But the townspeople had forgotten that the Cat God was actually their God. The Cat God was angry at their betrayal and seeing how it was Tuesday rained firey tacos down upon them.
+      But the townspeople had forgotten that the Cat God was actually their God. The Cat God was angry at their betrayal and seeing how it was Tuesday rained fiery tacos down upon them.
+      The people ate the tacos. And they were good. They made another sacrifice to their re-adopted Cat God.
     </p>
   </body>
 </html>
