--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       But the townspeople had forgotten that the Cat God was actually their God. The Cat God was angry at their betrayal and seeing how it was Tuesday rained fiery tacos down upon them.
       The people ate the tacos. And they were good. They made another sacrifice to their re-adopted Cat God.
       Gretchen, who had seemingly been forgotten, was like "What doth be this mate?" and unleashed the horde to plunder the tacos.
+      The tacos were plentiful, so the townspeople, already sated, sat back and watched the Vikings consume the fire tacos.
     </p>
   </body>
 </html>
