--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       The people ate the tacos. And they were good. They made another sacrifice to their re-adopted Cat God.
       Gretchen, who had seemingly been forgotten, was like "What doth be this mate?" and unleashed the horde to plunder the tacos.
       The tacos were plentiful, so the townspeople, already sated, sat back and watched the Vikings consume the fire tacos.
+      And all the vikings died from the firey tacos, and seeing this Gretchen said "wtf I'm sailing back to Denmark". And the town was saved. Cat God be praised.
     </p>
   </body>
 </html>
