--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="style.css"
+  </head>
   <body>
     <p>It was a dark and stormy night...
       The fire jumped out of the fireplace and consumed the sacrifice on the alter.
