--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="style.css"
+    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
   </head>
   <body>
     <p>It was a dark and stormy night...
       The fire jumped out of the fireplace and consumed the sacrifice on the alter.
       The offering was pleasing to the Cat God, whose blessings would bring rain.
-      The Cat God peed on the town.
+      The Cat God peed on the town./>
       And the harvest was plentiful but then vikings came ashore!
       The vikings were led by the powerful Gretchen Hawshining, a goddess of
       Kicking Ass and Taking Names. The townspeople were totally hosed but they
@@ -19,6 +20,6 @@
       The tacos were plentiful, so the townspeople, already sated, sat back and watched the Vikings consume the fire tacos.
       And all the vikings died from the firey tacos, and seeing this Gretchen said "wtf I'm sailing back to Denmark". And the town was saved. Cat God be praised.
     </p>
-    <p>U wot ma8?</p>
+    <p>U wot m8?</p>
   </body>
 </html>
